--- a/backup/8.html
+++ b/backup/8.html
@@ -106,3 +106,56 @@
         </nav>
     </div>
 </header>
+
+
+
+<div class="sidebar-wrapper" data-simplebar="true">
+    <div class="sidebar-header">
+        <div>
+            <img src="assets/images/logo-icon.png" class="logo-icon" alt="logo icon">
+        </div>
+        <div>
+            <h4 class="logo-text">Bettcash</h4>
+        </div>
+        <div class="toggle-icon ms-auto"><i class='bx bx-arrow-back'></i></div>
+    </div>
+
+    <!-- Navigation -->
+    <ul class="metismenu text-decoration-none" id="menu">
+        <li>
+            <a href="javascript:;" class="has-arrow">
+                <div class="parent-icon"><i class='bx bx-home-alt'></i>
+                </div>
+                <div class="menu-title">Matches</div>
+            </a>
+            <ul>
+                <li> <a href="#" id="showUpcoming"><i class='bx bx-radio-circle'></i>Prematch</a>
+                </li>
+                <li> <a href="#" id="showPlayed"><i class='bx bx-radio-circle'></i>Live</a>
+                </li>
+                
+            </ul>
+        </li>
+        @foreach ($sports as $sport)
+            <li>
+                <a href="javascript:;" class="has-arrow">
+                    <div class="parent-icon"></div>
+                    <div class="menu-title text-capitalize">{{ $sport->name }}</div>
+                </a>
+                <ul>
+                    @foreach ($sport->leagues as $league)
+                        <li>
+                            <a href="" class="d-flex align-items-center text-decoration-none">
+                                <img src="{{ $league->logo }}" alt="{{ $league->name }} Logo" 
+                                     class="img-thumbnail me-2" 
+                                     style="width: 25px; height: 25px; border-radius: 50%;">
+                                <span>{{ $league->name }}</span>
+                            </a>
+                        </li>
+                    @endforeach
+                </ul>
+            </li>
+        @endforeach
+    </ul>
+    <!-- End Navigation -->
+</div>
